# trae-solo-plane-war

./: .gitignore  OPTIMIZATION_PLAN.md  README.md  collision_benchmark.py  config.py  create_resources.py  game_logic.py  input_handler.py  main.py  object_pool.py  optimized_collision.py  performance_test.py  pyproject.toml  renderer.py  sounds.py  sprites.py  state_manager.py
